fixed double border in history

--- a/asset/fastcon/css/custom/custom.scss
+++ b/asset/fastcon/css/custom/custom.scss
@@ -1490,8 +1490,11 @@ ul.member-menu {
 	height: 100vh;
 	width: 18%;
 	background-color: #F5F5F5;
-	position: sticky;
-	top: 86px;
+
+	.member-menu {
+		position: sticky;
+		top: 86px;
+	}
 }
 
 .member-content-wrap {
@@ -1612,6 +1615,21 @@ ul.member-menu {
 	display: flex;
 }
 
+.accordion-header.multiple {
+	.accordion-img {
+		position: relative;
+		top: -9px;
+		right: -10px;
+		border: 1px solid #E0E0E0;
+
+		img {
+			position: relative;
+			top: 9px;
+			right: 10px;
+		}
+	}
+}
+
 .accordion-title {
 	display: flex;
 	margin-left: 55px;
@@ -1622,13 +1640,12 @@ ul.member-menu {
 
 	.accordion-img {
 		height: fit-content;
-	}
-
-	img {
 		max-width: 125px;
 		max-height: 125px;
 		margin-right: 55px;
+	}
 
+	img {
 		border: 1px solid #E0E0E0;
 	}
 
