--- a/asset/fastcon/css/custom/sass/_medium_devices.scss
+++ b/asset/fastcon/css/custom/sass/_medium_devices.scss
@@ -519,5 +519,9 @@
         text-align: center;
     }
 
-    
+    .member-nav {
+        position: sticky;
+        top: 48px;
+        z-index: 6;
+    }
 }
